--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,7 @@
 }
 
 @theme inline {
-  /* Military-inspired color palette for GuardFleetAgency */
+  /* Military-inspired color palette for guardianfleetagency */
   --color-navy: #1a365d;
   --color-navy-light: #2d5a87;
   --color-army-green: #4a5d23;
